--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,27 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.content{
+  display: flex;
+  flex-direction: column;
+  padding: 64px 60px 74px 57px;
+  box-sizing: border-box;
+  gap: 41px;
+  height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn_download{
+  padding: 16px 88px;
+  box-sizing: border-box;
+  height: 56px;
+  max-width: 277px;
+  width: 100%;
+  border-radius: 30px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: #5F5CF0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.container_download_area{
+  display: flex;
+  background-color: #F1F1F1;
+  flex-grow: 1;
 }
