--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -10,13 +10,13 @@
 	background-color: rgba(68, 68, 68, 0.77);
 	backdrop-filter: blur(7.2px);
 	opacity: 0;
-	transition: all ease-out 6s;
+	transition: opacity 400ms linear 1ms, transform 400ms linear 1ms;
 	z-index: 1000;
 }
 
 .blur_back.open {
 	opacity: 1;
-	transition: all ease-out 6s;
+	transition: opacity 400ms linear 1ms, transform 400ms linear 1ms;
 }
 
 .modal{
@@ -52,6 +52,16 @@
 	height: 34px;
 	border-radius: 100%;
 	background-color: rgba(204, 204, 206, 0.28);
+	cursor: pointer;
+	transition: all ease-out 0.6s;
+}
+
+.modal_btn_close:hover{
+	background-color: #F1F1F1;
+}
+
+.modal_btn_close:hover svg path {
+	fill: #5F5CF0;
 }
 
 .modal_content{
@@ -123,7 +133,7 @@
 	background-color: rgba(255, 255, 255, 0.4);
 }
 
-.modal_interactive{
+.modal_load_file_block_interactive{
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -145,15 +155,25 @@
 	top: 22px;
 }
 
-.modal_interactive_blur{
+.modal_load_file_block_interactive_blur{
 	position: absolute;
 	margin-top: 41px;
 	width: 170.84px;
 	height: 84.06px;
 	border-radius: 15.77px;
 	backdrop-filter: blur(1px);
-	background-color: rgba(255, 255, 255, 0.25);
+	background-color: rgba(44, 44, 44, 0.2);
+	box-shadow: inset 0 2.52px 2.52px 0  rgba(255, 255, 255, 0.25);
 	z-index: 1;
+}
+
+.modal_load_file_block_description{
+	display: flex;
+	justify-content: center;
+	margin-top: 140px;
+	font-weight: 600;
+	font-size: 14px;
+	color: #5F5CF0;
 }
 
 .modal_footer{
