--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -103,11 +103,36 @@
 	border: 1px solid #A5A5A5;
 	border-radius: 10px;
 	background-color: #F1F1F1;
+	transition: background-color 0.3s ease;
 }
 
+.modal_input_container:hover{
+	border: 1px solid #5F5CF0;
+}
+
+.modal_input_container.modal_input_container_hover {
+	background-color: #BBB9D2;
+}
+
+.modal_input_container_active{
+	border: 1px solid #5F5CF0;
+}
+
+.modal_input.modal_input_hover {
+	background-color: #BBB9D2;
+}
 
 .modal_input{
 	background-color: #F1F1F1;
+	font-weight: 500;
+	font-size: 17.5px;
+	color: #5F5CF0;
+	transition: background-color 0.3s ease;
+}
+
+.modal_input::placeholder {
+	font-weight: 500;
+	font-size: 17.5px;
 	color: #A5A5A5;
 }
 
@@ -115,65 +140,20 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border-radius: 33px;
+	cursor: auto;
 }
 
 .modal_btn_clear:hover{
-	border-radius: 33px;
 	background-color: #F1F1F1;
 }
 
-.modal_load_file_block{
-	margin-top: 26.33px;
-	padding: 39px 29px 31.24px 27px;
-	box-sizing: border-box;
-	width: 100%;
-	height: 229px;
-	border-radius: 30px;
-	border: 1px solid #A5A5A5;
-	background-color: rgba(255, 255, 255, 0.4);
+.modal_btn_clear_active{
+	cursor: pointer;
 }
 
-.modal_load_file_block_interactive{
-	position: relative;
-	display: flex;
-	justify-content: center;
-}
-
-.modal_img_dir{
-	position: absolute;
-}
-
-.modal_img_file_1{
-	position: absolute;
-	left: 40px;
-	top: 24px;
-}
-
-.modal_img_file_2{
-	position: absolute;
-	right: 40px;
-	top: 22px;
-}
-
-.modal_load_file_block_interactive_blur{
-	position: absolute;
-	margin-top: 41px;
-	width: 170.84px;
-	height: 84.06px;
-	border-radius: 15.77px;
-	backdrop-filter: blur(1px);
-	background-color: rgba(44, 44, 44, 0.2);
-	box-shadow: inset 0 2.52px 2.52px 0  rgba(255, 255, 255, 0.25);
-	z-index: 1;
-}
-
-.modal_load_file_block_description{
-	display: flex;
-	justify-content: center;
-	margin-top: 140px;
-	font-weight: 600;
-	font-size: 14px;
-	color: #5F5CF0;
+.modal_btn_clear_active svg path {
+	fill: #5F5CF0;
 }
 
 .modal_footer{
