--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,7 @@
   height: 100vh;
 }
 
-.btn_download{
-  padding: 16px 88px;
-  box-sizing: border-box;
+.btn_open_modal{
   height: 56px;
   max-width: 277px;
   width: 100%;
@@ -20,7 +18,7 @@
   background-color: #5F5CF0;
 }
 
-.container_download_area{
+.table{
   display: flex;
   background-color: #F1F1F1;
   flex-grow: 1;
