--- a/src/components/CsvDropzone/CsvDropzone.css
+++ b/src/components/CsvDropzone/CsvDropzone.css
@@ -1,4 +1,4 @@
-.modal_load_file_block{
+.load_file_block{
 	margin-top: 26.33px;
 	padding: 39px 29px 31.24px 27px;
 	box-sizing: border-box;
@@ -9,29 +9,29 @@
 	background-color: rgba(255, 255, 255, 0.4);
 }
 
-.modal_load_file_block_interactive{
+.load_file_block_animation{
 	position: relative;
 	display: flex;
 	justify-content: center;
 }
 
-.modal_img_dir{
+.img_dir{
 	position: absolute;
 }
 
-.modal_img_file_1{
+.img_file_1{
 	position: absolute;
 	left: 40px;
 	top: 24px;
 }
 
-.modal_img_file_2{
+.img_file_2{
 	position: absolute;
 	right: 40px;
 	top: 22px;
 }
 
-.modal_load_file_block_interactive_blur{
+.load_file_block_animation_blur{
 	position: absolute;
 	margin-top: 41px;
 	width: 170.84px;
@@ -43,7 +43,7 @@
 	z-index: 1;
 }
 
-.modal_load_file_block_description{
+.load_file_block_animation_description{
 	display: flex;
 	justify-content: center;
 	margin-top: 140px;
@@ -52,13 +52,19 @@
 	color: #5F5CF0;
 }
 
-.modal_load_file_block_success{
+.load_file_block_success{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	opacity: 0;
+	transition: opacity 400ms ease;
 }
 
-.modal_load_file_block_title{
+.load_file_block_success_transition{
+	opacity: 1;
+}
+
+.load_file_block_title{
 	display: flex;
 	justify-content: center;
 	font-weight: 600;
@@ -66,7 +72,7 @@
 	color: #5F5CF0;
 }
 
-.modal_load_file_block_description_container_1{
+.load_file_block_description{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -77,26 +83,36 @@
 	gap: 9px;
 }
 
-.modal_load_file_block_description_1{
+.load_file_block_file_name{
 	font-weight: 500;
 	font-size: 12px;
 	color: #5F5CF0;
 }
 
-.modal_load_file_block_description_2{
-	font-weight: 400;
-	font-size: 12px;
-	color: #5F5CF0;
-}
-
-.modal_load_file_block_description_container_2{
+.load_file_block_description_container{
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
 }
 
-.modal_load_file_block_description_container_3{
+.load_file_block_description_container_{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+
+.load_file_block_description_title{
+	font-weight: 400;
+	font-size: 12px;
+	color: #5F5CF0;
+}
+
+.load_file_block_description_value{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	width: 70px;
+	font-weight: 400;
+	font-size: 12px;
+	color: #5F5CF0;
 }
