--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,4 +1,4 @@
-.blur{
+.background_blur{
 	position: fixed;
 	display: flex;
 	justify-content: center;
@@ -13,8 +13,7 @@
 	transition: opacity 400ms linear 1ms, transform 400ms linear 1ms;
 	z-index: 1000;
 }
-
-.blur.transition {
+.background_blur.transition {
 	opacity: 1;
 	transition: opacity 400ms linear 1ms, transform 400ms linear 1ms;
 }
@@ -37,26 +36,64 @@
 
 .modal_container{
 	position: relative;
-	padding: 14px 12.5px;
+	width: 100%;
+	height: 100%;
+}
+
+.modal_background {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.background_color_default {
+	position: absolute;
+	width: 100%;
 	height: 100%;
 	border-radius: 22px;
 	background: linear-gradient(to bottom, #5F5CF0, #DDDCFC);
-	transition: background-color 400ms linear 1ms, transform 400ms linear 1ms;
+	transition: opacity 1s ease;
+	opacity: 1;
 }
 
-.modal_container_success{
-	background: linear-gradient(to bottom, #5F5CF0, #8F8DF4); /*не работает плавность из-за linear-gradient*/
-	transition: background-color 400ms linear 1ms, transform 400ms linear 1ms;
+.active_default {
+	opacity: 0;
 }
 
-.modal_container_error{
-	background: linear-gradient(to bottom, #F05C5C, #8F8DF4); /*не работает плавность из-за linear-gradient*/
-	transition: background-color 400ms linear 1ms, transform 400ms linear 1ms;
+.background_color_error {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 22px;
+	background: linear-gradient(to bottom, #F05C5C, #8F8DF4);
+	transition: opacity 1s ease;
+	opacity: 0;
+}
+
+.active_error {
+	opacity: 1;
+}
+
+.background_color_success {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 22px;
+	background: linear-gradient(to bottom, #5F5CF0, #8F8DF4);
+	transition: opacity 1s ease;
+	opacity: 0;
+}
+
+.active_success{
+	opacity: 1;
 }
 
 .modal_header{
+	position: absolute;
 	display: flex;
 	justify-content: flex-end;
+	top: 14px;
+	right: 12.5px;
 }
 
 .btn_close{
@@ -81,8 +118,17 @@
 }
 
 .modal_content{
+	position: absolute;
 	display: flex;
 	flex-direction: column;
+	top: 45px;
+	left: 12.5px;
+	right: 12.5px;
+	z-index: 1000;
+}
+
+.modal_content_response{
+	top: 57px;
 }
 
 .modal_content_header{
@@ -134,6 +180,7 @@
 	align-items: center;
 	padding: 6px 9px;
 	box-sizing: border-box;
+	height: 35px;
 	border: 1px solid #A5A5A5;
 	border-radius: 10px;
 	background-color: #F1F1F1;
